--- a/week3/day4/style.css
+++ b/week3/day4/style.css
@@ -432,12 +432,10 @@ nav{
     font-size: 1.2rem;
     font-weight: 600;
     text-transform: uppercase;
+    margin: 0 40px;
 } 
 nav ul li:nth-child(4){
     padding-bottom: 0;
-}
-nav {
-    margin: 0 40px;
 }
 span{
     margin-right: 10px;
@@ -584,6 +582,51 @@ h2 span{
   border: 5px solid white;
   border-right: none;
 }
+nav{
+  background-color: transparent;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin: 0;
+  position: absolute;
+  top: 30px;
+  right: 10px;
+} 
+nav ul li {
+  display: inline;
+  margin: 0 10px;
+}
 
-
+section{
+  overflow: hidden;
+  margin: 40px;
+}
+.float{
+  float: left;
+  display: block;
+  width: 50%;
+}
+section:nth-of-type(2)>div{
+  float: left;
+  width: calc(50% - 30px);
+  display: block;
+}
+section:nth-of-type(2)>div:nth-of-type(1),
+ {
+  margin-right: 10px;
+}
+section:nth-of-type(2)>div:nth-of-type(2) {
+  margin-left: 10px;
+}
+section:nth-of-type(2)>div:nth-of-type(3) {
+  margin-right: 10px;
+}
+section:nth-of-type(3)>div{
+  float: left;
+  width: 50%;
+  display: block;
+  height: 150px;
+  padding: 0;
+}
 }
